kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pp-volitve-2018-zaobljube
spec:
  selector:
    app: pp-volitve-2018-zaobljube
  ports:
    - protocol: TCP
      port: 8801
      targetPort: 8801
