kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pp-volitve-2022
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - participativni-proracun.djnd.si
        - participativni-proracun.danesjenovdan.si
      secretName: pp-volitve-2022-tls
  rules:
    - host: participativni-proracun.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pp-volitve-2022
                port:
                  number: 3000
    - host: participativni-proracun.danesjenovdan.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pp-volitve-2022
                port:
                  number: 3000
